# kitchenaid-kettle-zigbee

./: .gitignore  CLAUDE.md  README.md  build.sh  requirements.txt  west.yml
.github/workflows/: build.yml
firmware/: CMakeLists.txt  Kconfig  prj.conf  sysbuild.conf  sysbuild_mcuboot.conf
firmware/boards/: nrf54l15dk_nrf54l15_cpuapp.conf  nrf54l15dk_nrf54l15_cpuapp.overlay
firmware/include/: zb_kettle.h
firmware/src/: main.c
z2m/: kitchenaid_kettle.js
